--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -8,12 +8,13 @@ WORKDIR /usr/src/app
 # where available (npm@5+)
 COPY package*.json ./
 
-RUN npm install
 # If you are building your code for production
-# RUN npm ci --only=production
+RUN npm ci --only=production
 
 # Bundle app source
 COPY . .
 
+RUN npm run build
+
 EXPOSE 3000
-CMD [ "npm", "run", "start:dev" ]
+CMD [ "npm", "run", "start" ]
