--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Heroku.
 # Run workflow on every push to master branch.
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 # Your workflows jobs.
 jobs:
