--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -9,7 +9,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 # If you are building your code for production
-RUN npm ci --only=production
+RUN npm ci
 
 # Bundle app source
 COPY . .
